# ai-capstone-project

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/generation/: generator.py
app/graph/: builder.py  state.py
app/graph/nodes/: generator.py  memory.py  retrieve.py  rewrite.py
app/graph/nodes/guard/: ground_guard.py  input_guard.py  output_guard.py
app/ingestion/: chunking.py  embed.py  extractor.py  filter.py  indexer.py  loader.py  storage.py
app/retrieval/: retriever.py
